# fugit

./: CHANGELOG.md  Cargo.toml  README.md  random.rs
.github/: dependabot.yml
.github/workflows/: build.yml
src/: aliases.rs  clock.rs  duration.rs  helpers.rs  instant.rs  lib.rs  rate.rs
