[package]
name = "fugit"
version = "0.3.0"
edition = "2021"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
description = "Time library for embedded targets with ease-of-use and performance first."
keywords = ["Time", "Duration", "Instant", "const"]
categories = ["date-and-time", "embedded", "no-std"]
readme = "README.md"
repository = "https://github.com/korken89/fugit"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.defmt]
version = "0.3.0"
optional = true

[package.metadata.docs.rs]
all-features = true
