[package]
name = "fugit"
version = "0.3.7"
edition = "2021"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
description = "Time library for embedded targets with ease-of-use and performance first."
keywords = ["Time", "Duration", "Instant", "const"]
categories = ["date-and-time", "embedded", "no-std"]
readme = "README.md"
repository = "https://github.com/korken89/fugit"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcd = ">=2.1,<3.0"

[dependencies.defmt]
version = ">=0.2.0,<0.4"
optional = true

[package.metadata.docs.rs]
all-features = true
